--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +18,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"/>
-        
-        <activity
-            android:name=".MusicActivity"/>
+        <activity android:name=".LoginActivity"/>
     </application>
-
 </manifest>
